--- a/style.css
+++ b/style.css
@@ -43,13 +43,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 15px;
+    flex-direction: column;
 }
 
 #code {
     width: 98%;
-    height: 97%;
+    height: calc(100vh - 80px);
+    margin-bottom: 10px;
     background-color: #ff620027;
-    border-radius: 10px;
+    border-radius: 20px;
     border: 0;
     padding: 15px;
     font-size: 19px;
@@ -58,15 +61,13 @@ body {
 }
 
 #execute {
-    width: 50px;
+    min-width: 50px;
+    padding-inline: 10px;
     height: 50px;
     border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    top: 20px;
-    left: 25px;
     border: 0;
     background-color: #FF6100;
     color: white;
@@ -75,17 +76,33 @@ body {
 }
 
 iframe {
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: calc(100% - 99px);
     position: fixed;
-    top: 0;
-    right: 100%;
+    bottom: 10px;
+    right: 150%;
+    transform: translateX(50%);
     transition: all 500ms;
     border: 0;
     outline: 0;
     background-color: white;
+    border: 1px solid #FF6100;
+    border-radius: 15px;
+    box-shadow: 0 0 20px -10px #FF6100;
 }
 
 pre{
     display: none;
+}
+
+header{
+    height: 70px;
+    width: 98%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 10px;
+    align-items: center;
+    background-color: #ff620021;
+    margin-top: 10px;
 }
