--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+* {
+	box-sizing: border-box;
+	direction: rtl;
+}
+
 @font-face {
 	font-family: "estedad";
 	font-weight: 100;
@@ -28,9 +33,12 @@
 	src: url("../font/Estedad-Black.ttf");
 }
 
-* {
-	box-sizing: border-box;
-	direction: rtl;
+img {
+	border: 0;
+	max-width: 100%;
+}
+
+body, input, textarea, select {
 	font-family: "estedad", sans-serif;
 }
 
