feat(save): add save btn

--- a/style/style.css
+++ b/style/style.css
@@ -108,6 +108,22 @@ body {
 	opacity: 1;
 }
 
+.save {
+	min-width: 50px;
+	padding-inline: 10px;
+	height: 50px;
+	border-radius: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 0;
+	background-color: #D1FF6E;
+	color: rgb(0, 0, 0);
+	font-size: 16px;
+	cursor: pointer;
+	transition: all 1000ms;
+}
+
 .iframe {
 	width: 98%;
 	height: calc(100% - 99px);
@@ -122,6 +138,13 @@ body {
 	border: 1px solid #FF6100;
 	border-radius: 15px;
 	box-shadow: 0 0 20px -10px #FF6100;
+}
+
+.btn-wrapper{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 }
 
 .output, .error {
