--- a/style/style.css
+++ b/style/style.css
@@ -214,3 +214,11 @@ input:checked + .slider {
 input:checked + .slider:before {
 	transform: translateX(26px);
 }
+
+div:where(.swal2-container) div:where(.swal2-popup){
+	border-radius: 25px !important;
+}
+
+div:where(.swal2-icon){
+	margin: 1.5em auto .6em !important;
+}
