--- a/style/style.css
+++ b/style/style.css
@@ -222,3 +222,30 @@ div:where(.swal2-container) div:where(.swal2-popup){
 div:where(.swal2-icon){
 	margin: 1.5em auto .6em !important;
 }
+
+div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm){
+	background-color: #ff6200 !important;
+	border-radius: 10px !important;
+	width: 100px !important;
+	height: 50px !important;
+	display: flex !important;
+	justify-content: center !important;
+	align-items: center !important;
+	padding: 0 !important;
+	position: relative !important;
+	margin: 0 !important;
+	overflow: hidden !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::after{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: #ff6200;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	content: "باشه";
+}
