--- a/style/style.css
+++ b/style/style.css
@@ -337,6 +337,33 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	font-size: 18px;
 }
 
-.setting-ite-wrapper{
-	
+.setting-item-wrapper{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 25px;
+	width: 100%;
+}
+
+.setting-item{
+	flex-basis: 50%;
+	border-radius: 15px;
+	overflow: hidden;
+	padding: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	box-shadow: 0 0 20px -15px black;
+}
+
+.setting-item img{
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+	object-fit: cover;
+}
+
+.setting-item.active{
+	border: 1px solid #FF6100;
 }
