--- a/style/style.css
+++ b/style/style.css
@@ -337,7 +337,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	font-size: 18px;
 }
 
-.setting-item-wrapper{
+.setting-item-wrapper {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -345,7 +345,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	width: 100%;
 }
 
-.setting-item{
+.setting-item {
 	flex-basis: 50%;
 	border-radius: 15px;
 	overflow: hidden;
@@ -357,13 +357,14 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	box-shadow: 0 0 20px -15px black;
 }
 
-.setting-item img{
+.setting-item img {
 	width: 100%;
 	height: 100%;
 	border-radius: 10px;
 	object-fit: cover;
+	border: 1px solid transparent;
 }
 
-.setting-item.active{
+.setting-item.active {
 	border: 1px solid #FF6100;
 }
