--- a/style/style.css
+++ b/style/style.css
@@ -355,6 +355,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	align-items: center;
 	cursor: pointer;
 	box-shadow: 0 0 20px -15px black;
+	border: 1px solid transparent;
 }
 
 .setting-item img {
@@ -362,9 +363,9 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	height: 100%;
 	border-radius: 10px;
 	object-fit: cover;
-	border: 1px solid transparent;
 }
 
 .setting-item.active {
 	border: 1px solid #FF6100;
+	box-shadow: 0 0 20px -10px #FF6100;
 }
