--- a/style/style.css
+++ b/style/style.css
@@ -295,6 +295,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	width: 100%;
 	height: 100%;
 	z-index: 9;
+	display: none;
 }
 
 .setting_modal {
@@ -305,6 +306,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	position: fixed;
 	z-index: 10;
 	top: 50%;
+	display: none;
 	right: 50%;
 	transform: translate(50%, -50%);
 	border-radius: 15px;
