--- a/style/style.css
+++ b/style/style.css
@@ -133,7 +133,8 @@ button:hover {
 	opacity: 1;
 }
 
-.save {
+.save,
+.refactor {
 	min-width: 50px;
 	padding-inline: 10px;
 	height: 50px;
@@ -151,13 +152,19 @@ button:hover {
 }
 
 .save>svg,
-.execute>svg {
+.execute>svg ,
+.refactor>svg {
 	width: 25px;
 	margin-right: 4px;
 }
 
 .execute>svg {
 	width: 20px;
+}
+
+.refactor{
+	background-color: rgb(39 110 246);
+	color: white;
 }
 
 .iframe {
