--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,8 @@ button:hover {
 }
 
 .save,
-.refactor {
+.refactor,
+.login {
 	min-width: 50px;
 	padding-inline: 10px;
 	height: 50px;
@@ -147,13 +148,15 @@ button:hover {
 	color: rgb(0, 0, 0);
 	font-size: 16px;
 	cursor: pointer;
+	text-decoration: none;
 	transition: all 1000ms;
 	text-wrap: nowrap;
 }
 
 .save>svg,
 .execute>svg ,
-.refactor>svg {
+.refactor>svg,
+.login>svg {
 	width: 25px;
 	margin-right: 4px;
 }
@@ -164,6 +167,12 @@ button:hover {
 
 .refactor{
 	background-color: rgb(39 110 246);
+	color: white;
+}
+
+.login{
+	display: none;
+	background-color: #FF6100;
 	color: white;
 }
 
