--- a/style/style.css
+++ b/style/style.css
@@ -394,4 +394,7 @@ div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm)::a
 	span.title{
 		display: none;
 	}
+	.setting_modal{
+		width: 96%;
+	}
 }
