--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,8 @@ button:hover {
 
 .save,
 .refactor,
-.login {
+.login,
+.logout {
 	min-width: 50px;
 	padding-inline: 10px;
 	height: 50px;
@@ -156,7 +157,8 @@ button:hover {
 .save>svg,
 .execute>svg,
 .refactor>svg,
-.login>svg {
+.login>svg,
+.logout>svg {
 	width: 25px;
 	margin-right: 4px;
 }
@@ -170,7 +172,8 @@ button:hover {
 	color: white;
 }
 
-.login {
+.login,
+.logout {
 	display: none;
 	background-color: #FF6100;
 	color: white;
