--- a/style/style.css
+++ b/style/style.css
@@ -195,14 +195,15 @@ button:hover {
 }
 
 .see_btn{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-width: 100px;
-	min-height: 40px;
-	border-radius: 10px;
-	background-color: #FF6100;
-	color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 222px;
+    min-height: 40px;
+    border-radius: 10px;
+    background-color: #4000ff;
+    color: white;
+    text-decoration: none;
 }
 
 .iframe {
