--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,5 +3,16 @@
 @tailwind utilities;
 
 @layer base {
+    #nprogress .bar {
+        background: #29d;
+    }
 
+    #nprogress .peg {
+        box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+    }
+
+    #nprogress .spinner-icon {
+        border-top-color: #29d;
+        border-left-color: #29d;
+    }
 }
