--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,16 +3,17 @@
 @tailwind utilities;
 
 @layer base {
-    #nprogress .bar {
-        background: #29d;
-    }
 
-    #nprogress .peg {
-        box-shadow: 0 0 10px #29d, 0 0 5px #29d;
-    }
+}
 
-    #nprogress .spinner-icon {
-        border-top-color: #29d;
-        border-left-color: #29d;
-    }
+/*Nprogress change color*/
+#nprogress .bar {
+    background: #FF5C00 !important;
+}
+#nprogress .peg {
+    box-shadow: 0 0 10px #FF5C00, 0 0 5px #FF5C00 !important;
+}
+#nprogress .spinner-icon {
+    border-top-color: #FF5C00 !important;
+    border-left-color: #FF5C00 !important;
 }
