--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,39 @@
 @tailwind utilities;
 
 @layer base {
-    
+    @font-face {
+        font-family: "estedad";
+        font-weight: 100;
+        src: url("/fonts/Estedad-Thin.ttf");
+    }
+
+    @font-face {
+        font-family: "estedad";
+        font-weight: 300;
+        src: url("/fonts/Estedad-Light.ttf");
+    }
+
+    @font-face {
+        font-family: "estedad";
+        font-weight: 400;
+        src: url("/fonts/Estedad-Medium.ttf");
+    }
+
+    @font-face {
+        font-family: "estedad";
+        font-weight: 700;
+        src: url("/fonts/Estedad-Bold.ttf");
+    }
+
+    @font-face {
+        font-family: "estedad";
+        font-weight: 900;
+        src: url("/fonts/Estedad-Black.ttf");
+    }
+
+    * {
+        font-family: "estedad", sans-serif !important;
+    }
 }
 
 /*Nprogress change color*/
