--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,19 @@
 
     * {
         font-family: "estedad", sans-serif !important;
+
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: white;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #FF5C00;
+            border-radius: 100px;
+        }
     }
 }
 
@@ -64,6 +77,37 @@
     font-size: 18px;
 }
 
-.cm-tooltip {
+.cm-tooltip-autocomplete,
+.cm-tooltip,
+.cm-tooltip-below {
     font-size: 15px;
+    border-radius: 5px !important;
+    border: 1px solid #cfcfcf !important;
+    box-shadow: 5px 5px 10px 0 rgba(221, 221, 221, 0.5);
+}
+
+.cm-tooltip-autocomplete > ul,
+.cm-tooltip > ul,
+.cm-tooltip-below > ul {
+
+}
+
+.cm-tooltip-autocomplete > ul > li,
+.cm-tooltip > ul > li,
+.cm-tooltip-below > ul > li {
+
+}
+
+.cm-tooltip-autocomplete > ul > li[aria-selected="true"],
+.cm-tooltip > ul > li[aria-selected="true"],
+.cm-tooltip-below > ul > li[aria-selected="true"] {
+    background-color: #ff913f !important;
+}
+
+.cm-tooltip-autocomplete > ul, .cm-tooltip-autocomplete > ul, .cm-tooltip > ul, .cm-tooltip > ul, .cm-tooltip-below > ul, .cm-tooltip-below > ul, .cm-tooltip-autocomplete > ul > li, .cm-tooltip-autocomplete > ul > li, .cm-tooltip > ul > li, .cm-tooltip > ul > li, .cm-tooltip-below > ul > li, .cm-tooltip-below > ul > li {
+    overflow: hidden !important;
+}
+
+.cm-content {
+    height: calc(100vh - 35px) !important;
 }
