--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -111,3 +111,9 @@
 .cm-content {
     height: calc(100vh - 35px) !important;
 }
+
+.window {
+    /*width: ;*/
+    cursor: move;
+    position: absolute;
+}
