--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,7 +113,10 @@
 }
 
 .window {
-    /*width: ;*/
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background-color: #fff;
     cursor: move;
     position: absolute;
 }
