feat(remove): remove scroolbar from input type [mobile]

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -166,3 +166,9 @@ svg.active .svg-salam-3 {
 .mt-\[170px\] {
     margin-top: 170px;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
