--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,6 +76,10 @@
     border: 0 !important;
 }
 
+html.dark .ͼ2 .cm-gutters {
+    filter: invert(1) !important;
+}
+
 .ͼ1 .cm-lineNumbers .cm-gutterElement {
     padding: 0 11px 0 0;
 }
