feat(theme): add theme btn

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -186,3 +186,42 @@ input[type="number"]::-webkit-inner-spin-button {
 html.dark .ͼ1 .cm-cursor, .ͼ1 .cm-dropCursor {
     border-left: 1px solid #ffffff;
 }
+
+.toggle {
+    background-color: #ff5b00;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
+    line-height: 1;
+}
+
+.input {
+    display: none;
+}
+
+.icon {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+    transition: transform 500ms;
+}
+
+.icon--moon {
+    color: #b4eaff;
+}
+
+.icon--sun {
+    transform: scale(0);
+    color: yellow;
+}
+
+#switch:checked + .icon--moon {
+    transform: rotate(360deg) scale(0);
+}
+
+#switch:checked ~ .icon--sun {
+    transform: scale(1) rotate(360deg);
+}
