faet(try to): fix an important bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,6 +72,14 @@
     border-left-color: #FF5C00 !important;
 }
 
+.cm-editor {
+    height: 100%;
+}
+
+.cm-scroller {
+    overflow: visible !important;
+}
+
 .ͼ2 .cm-gutters {
     border: 0 !important;
 }
