feat(remove): remove shadow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -197,7 +197,7 @@ html.dark .ͼ1 .cm-cursor, .ͼ1 .cm-dropCursor {
     display: grid;
     place-items: center;
     cursor: pointer;
-    box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);*/
     line-height: 1;
 }
 
