--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,7 +47,7 @@
         }
 
         ::-webkit-scrollbar-track {
-            background: white;
+            background: transparent;
         }
 
         ::-webkit-scrollbar-thumb {
